Fixed for jetbrains publish, improved default values, improved word offsets and markers resolution